# orbit4ml

./: 404.html  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
changelog/: index.html
community/: index.html
docs/: changelog.md  community.md  index.md
docs/documentation/: data.md  index.md  sim.md
docs/examples/: index.md
docs/superpowers/plans/: 2026-03-22-orbit4ml-v01-mvp.md  2026-04-19-orbitalml-v1.md  2026-04-19-planetharness-v1.md
docs/superpowers/specs/: 2026-03-22-orbit4ml-ecosystem-design.md  2026-04-19-orbitalml-design.md  2026-04-19-planetharness-design.md
docs/tutorials/: getting_started.md  index.md
documentation/: index.html
documentation/data/: index.html
documentation/sim/: index.html
examples/: index.html  mvp_training_loop.py
orbit4ml/: __init__.py
orbit4ml/data/: __init__.py  eurosat.py
orbit4ml/sim/: __init__.py  constellation.py  eclipse.py  faults.py  isl.py  propagator.py  sun.py  thermal.py  twin.py  types.py
search/: search_index.json
superpowers/plans/2026-03-22-orbit4ml-v01-mvp/: index.html
superpowers/plans/2026-04-19-orbitalml-v1/: index.html
superpowers/plans/2026-04-19-planetharness-v1/: index.html
tests/: test_integration.py
tests/data/: test_eurosat.py
tests/sim/: test_constellation.py  test_eclipse.py  test_faults.py  test_isl.py  test_propagator.py  test_sun.py  test_thermal.py  test_twin.py  test_types.py
tutorials/: index.html
tutorials/getting_started/: index.html
(+3 files in other folders)
